kubernetes/apps/vault/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vault
  namespace: vault

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vault

  template:
    metadata:
      labels:
        app: vault

    spec:
      containers:

        - name: vault

          image: hashicorp/vault:1.20

          args:
            - server
            - /vault/config/vault.hcl

          ports:
            - containerPort: 8200

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:

            - name: config
              mountPath: /vault/config

            - name: data
              mountPath: /vault/data

      volumes:

        - name: config
          configMap:
            name: vault-config

        - name: data
          persistentVolumeClaim:
            claimName: vault-data
