kubernetes/apps/vault/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vault
  namespace: vault

spec:
  selector:
    app: vault

  ports:
    - port: 8200
      targetPort: 8200

  type: ClusterIP
