kubernetes/apps/vault/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vault-ingress
  namespace: vault

spec:
  ingressClassName: public

  rules:
    - host: vault.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: vault
                port:
                  number: 8200
